# bn_v3

./: .dockerignore  .gitignore  README.md  alembic.ini  config.py  dockerfile  main.py  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 30556578c205_initial_migration.py
src/bot_api/: bot.py
src/bot_api/handlers/: chats.py  login.py  schedule.py
src/bot_api/keyboards/: chats_keyboard.py  login_kb.py  reply_kb.py
src/core/chats/: models.py  schemas.py
src/core/common/: database.py  uow.py
src/core/schedule/: image_creator.py  parsers.py  schedule_builder.py  schemas.py  service.py
src/core/users/: models.py  repository.py  service.py
src/plugins/: email_handler.py
