[project]
name = "bn-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "beautifulsoup4==4.13.3",
    "httpx>=0.28.1",
    "imgkit>=1.2.3",
    "jinja2>=3.1.6",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "xlrd>=2.0.1",
]
